# contents-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
src/bot/: fetch_article.py  image_gen.py  main.py  prompts.py  script_gen.py  video_creator.py  video_uploader.py
src/config/: config.yaml  flux_dev.json  logging_config.ini
src/tts/: __init__.py  config.json  istftnet.py  kokoro.py  model.py  plbert.py  text_to_speech.py
src/utils/: __init__.py  gpt_client.py  helpers.py
